--- a/scenario_reg/templates/registration.html
+++ b/scenario_reg/templates/registration.html
@@ -65,7 +65,7 @@
     <form action="" method="POST">
          <div class="lps" style="margin-top:60px;height: 100px; margin-bottom; 0px;">
         <p>Имя пользователя</p>
-        <input type="text" name="login">
+        <input autocomplete="off" type="text" name="login">
         </div>
         <div class="lps" style="margin-top: 50px; height: 100px;">
             <p>Пароль</p>
